updated but not working

--- a/python_app/config.json
+++ b/python_app/config.json
@@ -128,10 +128,88 @@
         "valorant",
         "apex legends",
         "csgo",
+        "movie trailer",
+        "full movie",
+        "short film",
+        "web series",
+        "episode",
+        "season",
+        "cinema",
+        "theatre print",
+        "hdrip",
+        "bluray",
+        "camrip",
+        "ott release",
+        "imax",
+        "behind the scenes",
+        "making video",
+        "movie review",
+        "film review",
+        "trailer",
+        "audio song",
+        "audio only",
+        "karaoke",
+        "reverb",
+        "slow reverb",
+        "sped up",
+        "nightcore",
+        "cover version",
+        "mashup",
+        "live performance",
+        "concert clip",
+        "acoustic version",
+        "wallpapers",
+        "4k wallpaper",
+        "hd wallpaper",
+        "profile pictures",
+        "dp",
+        "status video",
+        "whatsapp status",
+        "reels",
+        "short video",
+        "instagram reel",
+        "youtube shorts",
+        "facebook reels",
+        "game review",
+        "game trailer",
+        "beta gameplay",
+        "early access",
+        "rank push",
+        "scrims",
+        "custom room",
+        "kill montage",
+        "noob vs pro",
+        "pro gameplay",
+        "ranked match",
+        "clutch",
+        "ace gameplay",
+        "daily vlog",
+        "travel vlog",
+        "food vlog",
+        "street food",
+        "challenge video",
+        "prank video",
+        "reaction video",
+        "roast video",
+        "fun vlog",
+        "family vlog",
+        "house tour",
+        "room tour",
+        "memes",
+        "funny video",
+        "standup comedy",
+        "comedy scenes",
+        "best scenes",
+        "fun moments",
+        "fails compilation",
+        "try not to laugh",
+        "vine compilation",
         "counter strike",
         "call of duty",
         "overwatch",
         "dota",
+        "vlogs",
+        "vlog",
         "dota2",
         "league of legends",
         "mobile legends",
@@ -214,14 +292,22 @@
         "logan paul",
         "ksi",
         "jake paul",
+        "games",
+        "game",
+        "gameplay",
+        "stream",
         "casey neistat",
         "zach king",
         "charli d amelio",
         "khaby lame"
     ],
     "keyword_distraction": [
+        "vlogs",
+        "vlog",
         "song",
         "songs",
+        "gameplay",
+        "stream",
         "music",
         "lyrics",
         "album",
@@ -232,6 +318,52 @@
         "bgm",
         "instrumental",
         "mp3",
+        "trailer",
+        "teaser",
+        "scene",
+        "episode",
+        "season",
+        "movie",
+        "film",
+        "series",
+        "webseries",
+        "games",
+        "game",
+        "ott",
+        "cinema",
+        "reel",
+        "reels",
+        "short",
+        "shorts",
+        "status",
+        "meme",
+        "memes",
+        "reaction",
+        "roast",
+        "prank",
+        "challenge",
+        "vlog",
+        "vlogger",
+        "live",
+        "stream",
+        "streaming",
+        "highlights",
+        "clip",
+        "montage",
+        "ranked",
+        "custom match",
+        "scrim",
+        "ace",
+        "clutch",
+        "walkthrough",
+        "lets play",
+        "speedrun",
+        "review",
+        "song by",
+        "music by",
+        "audio",
+        "official audio",
+        "lyrical video",
         "game",
         "games",
         "gaming",
@@ -298,7 +430,7 @@
         "revision",
         "problem solving"
     ],
-    "default_study_start": "13:00",
+    "default_study_start": "17:00",
     "default_study_end": "00:00",
     "schedule_enabled": true,
     "grace_period_seconds": 5
