--- a/python_app/browser_extensions/chrome_extension/manifest.json
+++ b/python_app/browser_extensions/chrome_extension/manifest.json
@@ -1,25 +1,12 @@
 {
   "manifest_version": 3,
-  "name": "Smart OS Focus Tab Guard",
+  "name": "Smart OS Focus Guard",
   "version": "1.0",
-  "description": "Closes distracting tabs during study time",
-  "permissions": [
-    "tabs",
-    "scripting",
-    "activeTab"
-  ],
-  "host_permissions": [
-    "<all_urls>",
-    "http://127.0.0.1:5000/*"
-  ],
-  "background": {
-    "service_worker": "background.js"
-  },
+  "permissions": ["tabs"],
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content_inject.js"],
-      "run_at": "document_idle"
+      "js": ["content_script.js"]
     }
   ]
 }
